@@ -130,6 +130,17 @@ PASS Math.round(1.5) is 2
 PASS Math.round(-1.5) is -1
 PASS Math.round(1.6) is 2
 PASS Math.round(-1.6) is -2
+PASS Math.round(8640000000000000) is 8640000000000000
+PASS Math.round(8640000000000000.5) is 8640000000000000
+PASS Math.round(8640000000000001) is 8640000000000001
+PASS Math.round(8640000000000002) is 8640000000000002
+PASS Math.round(9007199254740990) is 9007199254740990
+PASS Math.round(9007199254740991) is 9007199254740991
+PASS Math.round(-8640000000000000) is -8640000000000000
+PASS Math.round(-8640000000000001) is -8640000000000001
+PASS Math.round(-8640000000000002) is -8640000000000002
+PASS Math.round(-9007199254740990) is -9007199254740990
+PASS Math.round(-9007199254740991) is -9007199254740991
 PASS Math.round(Infinity) is Infinity
 PASS Math.round(-Infinity) is -Infinity
 PASS Math.sin(NaN) is NaN
